k8s/worker-deployment.yml
# No need for ports or service file for worker as nobody talks to it
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: dilipl/multi-worker
          # Defining env vars. Value is the ClusterIP service for redis
